[tool.poetry]
name = "sf-hamilton"
version = "1.1.1"
description = "Hamilton, the micro-framework for creating dataframes."
authors = [
    "Stefan Krawczyk <skrawczyk@stitchfix.com>",
    "Elijah ben Izzy <elijah.benizzy@stitchfix.com>"
]
readme = "README.md"
homepage = "https://github.com/stitchfix/hamilton"
repository = "https://github.com/stitchfix/hamilton"

keywords = ["hamilton"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
]
packages = [
    { include = "hamilton" }
]
exclude = [
    "tests/**/*"
]

# Requirements
[tool.poetry.dependencies]
python = ">=3.7.1, <3.11"
pandas = "^1.3.4"
numpy = "^1.21.4"
graphviz = "^0.18"
networkx = "^2.6.3"
dataclasses = {version = "^0.8", python = "~3.6"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.15.0"
pytest-assume = "^2.4.3"
pytest-cov = "^3.0.0"


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/stitchfix/hamilton/issues"
"Source" = "https://github.com/stitchfix/hamilton"


[tool.poetry.build]
generate-setup-file = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"